added Overworld soul and working on new block

--- a/src/main/resources/assets/lazysendremastered/lang/en_us.json
+++ b/src/main/resources/assets/lazysendremastered/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.lazysendremastered.nether_soul": "Nether Soul"
+  "item.lazysendremastered.nether_soul": "Nether Soul",
+  "item.lazysendremastered.overworld_soul": "Overworld Soul"
 }
